Updated current shows and misc.

--- a/artists/philipp_farra.html
+++ b/artists/philipp_farra.html
@@ -85,6 +85,17 @@
                     <img src="/exhibitions/01/8._Page_2.jpg">
                 </div>
             </div>
+            <h1>Exhibitions</h1>
+            
+            <ul>
+                <li>
+                    <a href="/exhibitions/01.html">
+                        <img src="/exhibitions/01/01_philippFarra_IS_notext.jpg" class="pictures">
+                        <p>Inaugurational Speeches</p>
+                        <p>May 28 - June 26, 2019</p>
+                    </a>
+                </li>
+            </ul>
                 
         </div>
     </main>
