--- a/exhibitions.html
+++ b/exhibitions.html
@@ -53,13 +53,8 @@
                 <li>
                     <h1>site 1</h1>
                     <h2>upcoming:</h2>
-                    <a href="exhibitions/03.html">
-                        <p>Nick Kochornswasdi Gallery Site 1 Grand Opening</p>
-                        <p>September 14 2019</p>
-                    </a>
-                </li>
-                <li>
-                    
+                    <p>Kelly Wall & lydon frank</p>
+                    <p>October 12 - November 3, 2019</p>
                 </li>
             </ul>
         
