--- a/exhibitions/past.html
+++ b/exhibitions/past.html
@@ -51,7 +51,13 @@
         <div class="content">
             <ul>
                 <li>
-                    <p><a href="01.html">2019 - philipp FARRA: inaugurational speeches. april 28 - may 26. site 1</a></p>
+                    <p><a href="01.html">2019 - Philipp Farra: Inaugurational Speeches. April 28 - May 26. site 1</a></p>
+                </li>
+                <li>
+                    <p><a href="02.html">2019 - diego barrientos: Paintings By Diego. August 3 - September 8. site 2</a></p>
+                </li>
+                <li>
+                    <p><a href="03.html">2019 - Nick Kochornswasdi Gallery Site 1 Grand Opening. September 14. site 1</a></p>
                 </li>
             </ul>
         
