--- a/exhibitions/upcoming.html
+++ b/exhibitions/upcoming.html
@@ -53,15 +53,10 @@
             <ul>
                 <li>
                     <h1>site 1</h1>
-                    <div class="exhibition-block">
-                        <a href="03.html">
-                            <p>Nick Kochornswasdi Gallery Site 1 Grand Opening</p>
-                            <p>September 14 2019</p>
-                        </a>  
-                    </div>
+                    
                     <div class="exhibition-block">
                         <p>Kelly Wall & lydon frank</p>
-                        <p>October 5 - November 2 2019</p>
+                        <p>October 12 - November 3, 2019</p>
                     </div>  
                     <div class="exhibition-block">
                         <p>nick kochornswasdi</p>
