--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                         </p>
                         <p>
                             NKG assists and supports its artists through exhibitions and finding dedicated patrons to financially support the
-                            artists through sales. NKG considers the artists as its primary clients. With the ultimate goal of increasing the
+                            artists through sales. NKG considers the artists as its primary clients, with the ultimate goal of increasing the
                             artists’ exposure, expand careers, and attract more prominent galleries that can further assist the artists.
                         </p>
                     
