Added title to 04, updated bio

--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
                         
                         <p>
                             Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, founded by Nick
-                            Kochornswasdi in Spring 2019. The gallery is committed to presenting critically minded artists through the gallery’s
-                            non-traditional platform and operation. 
+                            Kochornswasdi in Spring 2019, committed to exhibiting critically-minded artists. The gallery is currently based in
+                            downtown Los Angeles with a brand-new 166 square foot exhibition space with no plans to expand in the near future.
                         </p>
                         
                     </div>
