--- a/exhibitions.html
+++ b/exhibitions.html
@@ -54,6 +54,7 @@
                     <h1>site 1</h1>
                     <h2>upcoming:</h2>
                     <p>Kelly Wall & lydon frank</p>
+                    <p><em>TALK MORE NOW</em></p>
                     <p>October 12 - November 10, 2019</p>
                 </li>
             </ul>
