--- a/exhibitions/upcoming.html
+++ b/exhibitions/upcoming.html
@@ -56,6 +56,7 @@
                     
                     <div class="exhibition-block">
                         <p>Kelly Wall & lydon frank</p>
+                        <p><em>TALK MORE NOW</em></p>
                         <p>October 12 - November 10, 2019</p>
                     </div>  
                     <div class="exhibition-block">
