Updated mission statement

--- a/about.html
+++ b/about.html
@@ -48,12 +48,15 @@
                     <div class="description">
                         <p>
                             Nick Kochornswasdi Gallery (NKG) is committed to providing a platform for underappreciated, critically-minded artists
-                            through the gallery’s non-traditional operation while remaining independent of market trends.
+                            through the gallery’s non-traditional operation while always remaining independent of market trends.
                         </p>
-                        <p>
+                        <p> 
                             NKG assists and supports its artists through exhibitions and finding dedicated patrons to financially support the
-                            artists through sales. NKG considers the artists as its primary clients, with the ultimate goal of increasing the
-                            artists’ exposure, expand careers, and attract more prominent galleries that can further assist the artists.
+                            artists through sales, and because the gallery will always remain financially independent, NKG’s artists will always be
+                            free to create the work that they desire. NKG considers the artists as its primary clients, with the ultimate goal of
+                            increasing the artists’ exposure, expand careers, and attract more prominent galleries that can further assist the
+                            artists that go beyond the scope of the gallery itself.
+
                         </p>
                     
                     </div>
