Added pr, and 04

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -53,9 +53,12 @@
                 <li>
                     <h1>site 1</h1>
                     <h2>upcoming:</h2>
-                    <p>Kelly Wall & lydon frank</p>
-                    <p><em>TALK MORE NOW</em></p>
-                    <p>October 12 - November 10, 2019</p>
+                    <a href="exhibitions/04.html">
+                        <p>Kelly Wall & lydon frank</p>
+                        <p><em>TALK MORE NOW</em></p>
+                        <p>October 12 - November 10, 2019</p>
+                    </a>
+                    
                 </li>
             </ul>
         
