--- a/exhibitions/upcoming.html
+++ b/exhibitions/upcoming.html
@@ -55,9 +55,11 @@
                     <h1>site 1</h1>
                     
                     <div class="exhibition-block">
-                        <p>Kelly Wall & lydon frank</p>
-                        <p><em>TALK MORE NOW</em></p>
-                        <p>October 12 - November 10, 2019</p>
+                        <a href="04.html">
+                            <p>Kelly Wall & lydon frank</p>
+                            <p><em>TALK MORE NOW</em></p>
+                            <p>October 12 - November 10, 2019</p>
+                        </a>
                     </div>  
                     <div class="exhibition-block">
                         <p>nick kochornswasdi</p>
