--- a/exhibitions.html
+++ b/exhibitions.html
@@ -52,7 +52,7 @@
             <ul>
                 <li>
                     <h1>site 1</h1>
-                    <h2>upcoming:</h2>
+                    <h2>current:</h2>
                     <a href="exhibitions/04.html">
                         <p>Kelly Wall & lydon frank</p>
                         <p><em>TALK MORE NOW</em></p>
