--- a/exhibitions/current.html
+++ b/exhibitions/current.html
@@ -52,9 +52,13 @@
     </div>
     <div class="content">
         <ul>
-            <li>
-                
-            </li>
+            <div class="exhibition-block">
+                <a href="04.html">
+                    <p>Kelly Wall & lydon frank</p>
+                    <p><em>TALK MORE NOW</em></p>
+                    <p>October 12 - November 10, 2019</p>
+                </a>
+            </div>
         </ul>
 
     </div>
