--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <ul>
                 <li>
                     <a href="exhibitions/04.html">
-                        <h2>upcoming:</h2>
+                        <h2>current:</h2>
                         <p>Kelly Wall & lydon frank</p>
                         <p><em>TALK MORE NOW</em></p>
                         <p>October 12 - November 10, 2019</p> 
