--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <title>nick kochornswasdi gallery</title>
         <meta name="description" content="Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, committed to presenting critically minded artists through the gallery’s non-traditional platform and operation.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <!-- <link rel="stylesheet" href="css/styles.css" type="text/css"> -->
+        <link rel="stylesheet" href="construction.css" type="text/css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -24,7 +25,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="circle"></div>
+        <!-- <div class="circle"></div>
 
         <header>
             <h1>nick</h1>
@@ -53,7 +54,13 @@
                     </a>    
                 </li>
             </ul>
-        </div>
+        </div> -->
+        <div class="circle"></div>
+        <h1>under construction</h1>
+        <h2>elijah ford//tba. jan. 4 - feb. 1, 2020</h2>
+        <h3>1206 maple ave ste. 534 los angeles ca 90015</h3>
+
+        <div class="logo">nick kochornswasdi gallery</div>
 
         
         </main>
