updated with sierra's show

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div> -->
         <div class="circle"></div>
         <h1>under construction</h1>
-        <h2>elijah ford//displace. jan. 4 - feb. 1, 2020</h2>
+        <h2>sierra pollock//snoopy's vagina. feb. 8 - mar. 7, 2020</h2>
         <h3>1206 maple ave ste. 534 los angeles ca 90015</h3>
 
         <div class="logo">nick kochornswasdi gallery</div>
